# opinion_analysis

./: .gitignore  AGENTS.md  BATCH_ANALYSIS.md  COLLECTION_FIX.md  EXPONENTIAL_BACKOFF.md  FINAL_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_V3.md  Makefile  QUICKSTART_V2.md  QUICK_SUMMARY.md  README.md  TOOL_COMPATIBILITY.md  V2_UPGRADE.md  build.yaml  publish.yaml  readme_en.md
agent/: pyproject.toml  test_agent.py  test_multi_agent.py  test_realtime_sync.py
agent/src/: agent.py  agent_v2.py  agent_v2_backup.py  analysis_standards.py  main.py  main_v2.py
src/: build.yaml  s.yaml
src/app/: layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/backend/: pyproject.toml  requirements.txt
src/backend/src/: agent.py  event_queue.py  main.py
src/components/: OpinionDashboard.tsx
src/frontend/: index.js  package.json
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/components/: ChatPanel.tsx  OpinionDashboard.tsx  ThemeSwitcher.tsx  VncViewer.tsx
src/frontend/src/hooks/: useAgentState.ts  useTheme.tsx
src/frontend/src/lib/: const.ts  types.ts
src/lib/: types.ts
