[project]
name = "agent"
version = "2.0.0"
description = "舆情分析系统 - 基于 AG-UI 协议"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn",
    "fastapi",
    "pydantic-ai-slim[ag-ui]",
    "pydantic-ai-slim[openai]",
    "python-dotenv",
    "logfire>=4.10.0",
    "pandas",
    "googlesearch-python",
    "markdown>=3.10",
    "agentrun-inner-test>=0.0.8",
]
